# buddy-examples

./: .gitignore  .gitmodules  CMakeLists.txt  README.md  flake.nix
DeepSeekR1/: CMakeLists.txt  Main.cpp
cmake/: buddy-examples.cmake
examples/: CMakeLists.txt
examples/DeepSeekR1/: CMakeLists.txt  Main.cpp  import-deepseek-r1.py
models/: CMakeLists.txt
models/GemminiDeepSeekR1/: CMakeLists.txt
models/GemminiLeNet/: CMakeLists.txt  buddy-lenet-import.py
models/archs/: CMakeLists.txt
models/archs/buckyball/: CMakeLists.txt
models/archs/buckyball/Bert/: CMakeLists.txt
models/archs/buckyball/BuddyNext/: CMakeLists.txt
models/archs/buckyball/DeepSeekR1/: CMakeLists.txt
models/archs/buckyball/Gemma4/: CMakeLists.txt
models/archs/buckyball/LeNet/: CMakeLists.txt
models/archs/buckyball/MobileNetV3/: CMakeLists.txt
models/archs/buckyball/Qwen3/: CMakeLists.txt
models/archs/buckyball/ResNet18/: CMakeLists.txt
models/archs/buckyball/StableDiffusion/: CMakeLists.txt
models/archs/buckyball/Whisper/: CMakeLists.txt
models/archs/buckyball/YOLO26/: CMakeLists.txt
models/archs/buckyball/llama2/: CMakeLists.txt
models/archs/gemmini/: CMakeLists.txt
models/archs/gemmini/Bert/: CMakeLists.txt
models/archs/gemmini/BuddyNext/: CMakeLists.txt
models/archs/gemmini/DeepSeekR1/: CMakeLists.txt
models/archs/gemmini/Gemma4/: CMakeLists.txt
models/archs/gemmini/LeNet/: CMakeLists.txt
models/archs/gemmini/MobileNetV3/: CMakeLists.txt
models/archs/gemmini/Qwen3/: CMakeLists.txt
models/archs/gemmini/ResNet18/: CMakeLists.txt
models/archs/gemmini/StableDiffusion/: CMakeLists.txt
models/archs/gemmini/YOLO26/: CMakeLists.txt
models/archs/gemmini/llama2/: CMakeLists.txt
models/lib/: BuddyTraceUtils.cpp  BuddyTraceUtils.h  CMakeLists.txt  CRunnerUtils.cpp  README.md
models/lib/trace/: __init__.py  config.py
models/models/: CMakeLists.txt
models/models/Bert/: CMakeLists.txt  bert-main.cpp  import-bert.py
models/models/Bert/trace/: trace.toml
models/models/BuddyNext/: CMakeLists.txt  buddy-next-runtime.cpp  next-ffn.mlir  next-matmul-transpose.mlir  next-mhsa-core.mlir
models/models/BuddyNext/decode/: next-ffn.mlir  next-gqa-attention-fusion.mlir  next-gqa-attention.mlir  next-linalg-matmul.mlir  next-norm.mlir  next-rope.mlir  next-tosa-matmul.mlir
models/models/BuddyNext/prefill/: next-embedding.mlir  next-mhsa-context.mlir  next-mhsa-core.mlir  next-mhsa-qkv.mlir  next-output.mlir
models/models/DeepSeekR1/: .gitignore  CMakeLists.txt  deepseek-r1-main.cpp  import-deepseek-r1.py
models/models/DeepSeekR1/trace/: trace.toml
models/models/Gemma4/: CMakeLists.txt  buddy-gemma4-main.cpp  import-gemma4.py  patch_decode_mlir.py  vocab.txt
models/models/Gemma4/trace/: trace.toml
models/models/LeNet/: .gitignore  CMakeLists.txt  README.md  buddy-lenet-import.py  buddy-lenet-main.cpp  buddy-lenet-trace-main.cpp  generate_lenet_trace_mlir.py  model.py  pytorch-lenet-inference.py  pytorch-lenet-trace.py  pytorch-lenet-train.py
models/models/LeNet/include/: testutils.h
models/models/LeNet/trace/: trace-linalg-buckyball.toml  trace.toml
models/models/LeNet/traces/: TraceMeta.cpp  buddy-lenet-trace-main.cpp  lenet-host-trace-runner.cpp  pytorch-lenet-trace.py
models/models/MobileNetV3/: CMakeLists.txt  buddy-mobilenetv3-import.py  buddy-mobilenetv3-main.cpp
models/models/MobileNetV3/trace/: trace.toml
models/models/Qwen3/: CMakeLists.txt  buddy-qwen3-0.6b-main.cpp  import-qwen3.py
models/models/Qwen3/trace/: decode.toml  prefill.toml
models/models/ResNet18/: CMakeLists.txt  buddy-resnet-import.py  buddy-resnet-main.cpp
models/models/ResNet18/trace/: trace.toml
models/models/StableDiffusion/: CMakeLists.txt  buddy-stable-diffusion-main.cpp  import-stable-diffusion.py
models/models/StableDiffusion/trace/: text_encoder.toml  unet.toml  vae.toml
models/models/Whisper/: CMakeLists.txt  import-whisper.py  whisper-main.cpp
models/models/Whisper/trace/: trace.toml
models/models/YOLO26/: .gitignore  CMakeLists.txt  import-yolo26n.py
models/models/YOLO26/trace/: trace.toml
models/models/llama2/: CMakeLists.txt  import-llama2.py  llama-main.cpp
models/models/llama2/trace/: trace.toml
platform/src/main/scala/: GemminiConfigs.scala
scripts/: init.sh  install-buddy-compiler.sh  perfetto.py  replace-content.py  utils.sh
scripts/nix/: bebop.nix  build-all.sh  compiler.nix  overlay.nix
sim/scripts/: build-compiler.sh  build-spike.sh  build-verilator.sh  run-spike.sh  run-verilator.sh
sim/scripts/marshal/: interactive.json  marshal
sim/scripts/marshal/interactive/: host-init.sh
sims/bebop/: run-bebop.sh
sims/firesim/: build-firesim.sh  run-firesim.sh
sims/firesim/makefrag/firesim/: build.mk  config.mk
sims/firesim/yaml/: config_build.yaml  config_build_recipes.yaml  config_hwdb.yaml  config_runtime.yaml
sims/marshal/: br-base.json  build-image.sh  interactive.json  marshal  marshal-config.yaml
sims/marshal/interactive/: host-init.sh
